updated templates in html and empolyee.test

--- a/output/team.html
+++ b/output/team.html
@@ -25,40 +25,38 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">hfh</h2>
+        <h2 class="card-title">Chase Follett</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 3</li>
-            <li class="list-group-item">Email: <a href="mailto:3@gmail.com">3@gmail.com</a></li>
-            <li class="list-group-item">Office number: 9</li>
+            <li class="list-group-item">ID: 123456</li>
+            <li class="list-group-item">Email: <a href="mailto:Chase.Follett@gmail.com">Chase.Follett@gmail.com</a></li>
+            <li class="list-group-item">Office number: 1234567894</li>
         </ul>
     </div>
-</div><div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">hj</h2>
+</div>
+<div class="card mx-auto" style="width: 18rem">
+   <h2 class="card-title">Tom Watts</h2>>Engineer</h5>
+   <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    < class="list-group list-group-flush">
+       <li class="list-group-item">ID: 789456</li>
+            <li class="list-group-item">Email: <a href="mailto:TomWats@gmail.com">TomWats@gmail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/TommieWatt6969" target="_blank" rel="noopener noreferrer">TommieWatt6969</a>
+        </li>
+        
+
+    </ul>
+</div><div class="card mx-auto" style="width: 18rem">
+    <h2 class="card-title">Craig Stilts</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 4</li>
-            <li class="list-group-item">Email: <a href="mailto:R@gmail.com">R@gmail.com</a></li>
-            <li class="list-group-item">School: jhjh</li>
-        </ul>
-    </div>
-</div><div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">nsdhf</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 45</li>
-            <li class="list-group-item">Email: <a href="mailto:j@gmail.com">j@gmail.com</a></li>
-            <li class="list-group-item">School: jhj</li>
-        </ul>
-    </div>
+
+    <ul class="list-group list-group-flush">
+         <li class="list-group-item">ID: 321654</li>
+            <li class="list-group-item">Email: <a href="mailto:StiltsyFresh@hotmail.com">StiltsyFresh@hotmail.com</a></li>
+            <li class="list-group-item">School: Brown</li>
+
+    </ul>
 </div>
             </div>
         </div>
